--- a/MobileApplication.csproj
+++ b/MobileApplication.csproj
@@ -69,6 +69,9 @@
 	  <MauiXaml Update="RGB_mudel.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="TripsTrapsTrull.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Valgusfoorpage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
