--- a/MobileApplication.csproj
+++ b/MobileApplication.csproj
@@ -57,6 +57,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\cross.png" />
 	  <None Remove="Resources\Images\krestik.png" />
 	  <None Remove="Resources\Images\nolik.png" />
 	</ItemGroup>
